Trying to fix a styling issue on IE by explictly setting outline:none in the .section-div h2 style.

--- a/nemi/static/styles/custom.css
+++ b/nemi/static/styles/custom.css
@@ -107,6 +107,7 @@ a[class='popup']{
 	margin-top: 0px;
 	margin-bottom: 0px;
 	background-color: DarkGreen;
+	outline: none;
 }
 .subcategory-action-div h3 {
 	position: relative;
